--- a/public/musa/one-district/blocks/content/body/__reports-title.css
+++ b/public/musa/one-district/blocks/content/body/__reports-title.css
@@ -51,7 +51,7 @@
   align-items: center;
   padding-left: 10px;
   border: 1px solid #535C6940;
-  cursor: default;
+  cursor: pointer;
 }
 
 .sort__toggle {
@@ -65,7 +65,7 @@
 }
 
 .sort__toggle span{
-  margin-left: 4px;
+  margin-left: 20px;
 }
 
 .sort__block {
@@ -101,4 +101,12 @@
 .sort__block__element:hover {
   transition: 0.3s;
   color: #929aa4;
+}
+
+.sort-element {
+  margin-right: 6px;
+}
+
+.sort__toggle__time {
+  margin-left: 2px !important
 }
