--- a/public/musa/notifications/assets/css/style.css
+++ b/public/musa/notifications/assets/css/style.css
@@ -1,3 +1,15 @@
+@import "../../../reusable-blocks/menu/menu.css";
+@import "../../../reusable-blocks/menu/__main.css";
+@import "../../../reusable-blocks/menu/__header.css";
+@import "../../../reusable-blocks/menu/__body.css";
+@import "../../../reusable-blocks/menu/__footer.css";
+@import "../../../reusable-blocks/header/header.css";
+@import "../../../reusable-blocks/header/__main.css";
+@import "../../blocks/content/body/body.css";
+@import "../../blocks/content/body/__reports-title.css";
+@import "../../blocks/content/body/__notification__districts.css";
+@import "../../blocks/content/body/__notification__notices.css";
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -87,190 +99,9 @@ body {
   height: 100%;
 }
 
-.user {
-  display: flex;
-  align-items: center;
-  min-width: 300px;
-}
-
 .user__notification, .user__info__arrow, .sort__block__element, .menu__body__list a,
 .menu__footer__toggle a, .reports-title__my-reports__btn button, .variables, .reports-footer__submit__button button{
   cursor: pointer;
-}
-
-.user__info {
-  width: 300px;
-  display: flex;
-  align-items: center;
-  margin-left: 30px;
-  font-family: "Open Sans Medium";
-}
-
-.user__info__name {
-  color: #fff;
-  width: 140px;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 15px;
-  text-align: start;
-  margin-left: 11px;
-}
-
-.user__info__post {
-  font-size: 10px;
-  line-height: 10px;
-  opacity: 0.85;
-  font-family: "Open Sans Bold";
-}
-
-.user__info__avatar {
-  border-radius: 100%;
-  border: 2px solid #fff;
-  background-image: url("../assets/img/avatar.jpg");
-  background-position: center;
-  background-size: 70px;
-  background-repeat: no-repeat;
-}
-
-.body {
-  width: 94%;
-  margin: 20px auto;
-  height: 100%;
-  color: #535C69;
-  border-radius: 3px;
-  font-family: "Open Sans Medium";
-}
-
-.body__back-button {
-  width: 100%;
-  height: 61px;
-  border-radius: 4px;
-  margin-bottom: 10px;
-  font-size: 17px;
-  display: flex;
-  align-items: center;
-}
-
-.body__back-button a {
-  text-decoration: none;
-  color: #535c69;
-}
-
-.body__back-button img {
-  margin-left: 16px;
-  margin-right: 4px;
-}
-
-.reports-title {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin-bottom: 18px;
-}
-
-.reports-title__my-reports {
-  display: flex;
-  align-items: center;
-}
-
-.reports-title__my-reports__text {
-  display: flex;
-  align-items: center;
-}
-
-.reports-title__my-reports__text {
-  font-size: 24px;
-  line-height: 33px;
-  letter-spacing: 0.01em;
-  margin-right: 6px;
-}
-
-.notifications {
-  width: 100%;
-  height: 75vh;
-  display: flex;
-}
-
-.notifications__districts {
-  width: 286px;
-  height: 100%;
-}
-
-.notifications__districts__header {
-  width: 100%;
-  height: 50px;
-  color: white;
-  border-radius: 4px 4px 0 0;
-  background-color: #535C69;
-  padding: 13px 12px 13px 12px;
-  font-size: 16px;
-}
-
-.notifications__districts__body {
-  height: 88%;
-  width: 100%;
-  overflow-y: scroll;
-  background-color: #fff;
-  padding-bottom: 19px;
-  border-radius: 4px;
-}
-
-.notifications__districts__body__element {
-  width: 100%;
-  font-size: 14px;
-  height: 61px;
-  display: flex;
-  align-items: center;
-  padding: 6px 12px 5px;
-  cursor: pointer;
-}
-
-.notifications__districts__body__element span {
-  margin-right: 12px;
-}
-
-.notifications__districts__body::-webkit-scrollbar {
-  width: 5px;               /* ширина scrollbar */
-}
-.notifications__districts__body::-webkit-scrollbar-track {
-  background: #f2f3f3;      /* цвет дорожки */
-}
-.notifications__districts__body::-webkit-scrollbar-thumb {
-  background-color: #a4aab0;  /* цвет плашки */
-  border-radius: 20px;       /* закругления плашки */
-}
-
-.notifications__districts__body__notif-count {
-  font-size: 10px;
-  display: block;
-  margin-top: 4px;
-  opacity: 0.7;
-  font-family: "Open Sans Bold";
-}
-
-.notifications__notices {
-  width: 85%;
-  margin-left: 6px;
-  margin-top: 52px;
-  height: 87.5%;
-  border-right: 4px;
-  /*background-color: #fff;*/
-}
-
-.notifications__notices__element {
-  width: 100%;
-  height: 70px;
-  display: flex;
-  align-items: center;
-  margin-bottom: 6px;
-  padding: 10px 13px;
-  border-radius: 4px;
-  background-color: #fff;
-}
-
-.notifications__notices__element__name{
-  width: 100%;
 }
 
 .warning {
@@ -397,7 +228,7 @@ body {
 }
 
 @media screen and (max-width: 1550px) {
-  .reports-list__body__element {
+  .reports__body__element {
     padding-left: 180px;
   }
 
@@ -413,7 +244,7 @@ body {
 }
 
 /*@media screen and (max-width: 1350px) {*/
-/*  .reports-list__body__element {*/
+/*  .reports__body__element {*/
 /*    padding-left: 150px;*/
 /*  }*/
 
@@ -429,7 +260,7 @@ body {
 /*}*/
 
 /*@media screen and (max-width: 1280px) {*/
-/*  .reports-list__body__element {*/
+/*  .reports__body__element {*/
 /*    padding-left: 100px;*/
 /*  }*/
 /*  .reports-list__title__third-element {*/
