--- a/public/musa/one-district/blocks/content/body/body.css
+++ b/public/musa/one-district/blocks/content/body/body.css
@@ -19,6 +19,8 @@
 .body__back-button a {
   text-decoration: none;
   color: #535c69;
+  display: flex;
+  align-items: center;
 }
 
 .body__back-button img {
