--- a/public/musa/reports/assets/css/style.css
+++ b/public/musa/reports/assets/css/style.css
@@ -88,449 +88,137 @@ table {
   src: url(../fonts/OpenSans-Bold.ttf);
 }
 
-body {
-  background-color: #eef2f4;
-  margin: 0;
-  font-family: "Open Sans Regular";
-  display: flex;
-}
-
-.main {
-  width: 100%;
-  height: 100%;
-}
-
-.user__notification, .user__info__arrow, .sort__block__element, .menu__body__list a,
-.menu__footer__toggle a, .reports-title__my-reports__btn button, .variables, .reports-footer__submit__button button{
-  cursor: pointer;
-}
-
-@media screen and (max-width: 2732px) {
-
-}
-
-@media screen and (max-width: 2560px) {
-
-}
-
-@media screen and (max-width: 2048px) {
-
-}
-
-@media screen and (min-width: 1920px) {
-
-  .menu {
-    height: 100vh;
-    width: 420px;
-  }
-
-  .menu__body div {
-    padding-left: 40px;
-    font-size: 22px;
-  }
-
-  .menu__body img {
-    width: 20px;
-    height: 20px;
-  }
-
-  .active {
-    width: 260px;
-  }
-
-  .menu__header {
-    padding: 40px 10px;
-    height: 118px;
-    justify-content: flex-start;
-  }
-
-  .menu__header__text {
-    font-size: 20px;
-    width: 242px;
-    line-height: 29.4px;
-  }
-
-  .menu__header img{
-    width: 70px;
-    height: 70px;
-  }
-
-  .menu__body__list a {
-    height: 40px;
-    width: 280px;
-  }
-
-  .menu__folded .menu__header {
-    padding: 24px 30px;
-  }
-
-  .menu__folded .active img {
-    padding: 0;
-    margin-left: 10px;
-  }
-
-  .menu__folded .menu__header img {
-    width: 70px;
-    height: 70px;
-  }
-
-  .menu__folded .menu__body__list a {
-    width: 40px;
-    height: 40px;
-  }
-
-  .menu__footer {
-    padding-left: 40px;
-  }
-
-  .menu__footer__text {
-    font-size: 20px;
-  }
-
-  .menu__folded {
-    width: 146px;
-  }
-
-  .menu__folded .menu__body__list {
-    padding-left: 46px;
-  }
-
-  .menu__folded .active {
-    width: 40px;
-    height: 40px;
-    align-items: center;
-  }
-
-  .menu__folded .menu__footer img {
-    margin-left: 16px;
-    width: 20px;
-    height: 20px;
-  }
-
-  .menu__folded .menu__footer__toggle {
-    padding-top: 50%;
-  }
-
-  .menu__body__list a {
-    margin-bottom: 18px;
-    line-height: 29.96px;
-  }
-
-  .menu__folded .menu__body__list img {
-    width: 20px;
-    height: 20px;
-  }
-
-  .active {
-    height: 40px !important;
-  }
-
-  .header__input {
-    height: 119px;
-  }
-
-  .header__main {
-    padding: 0 0 0 36px;
-  }
-
-  .user__notification img {
-    width: 32px;
-    height: 32px;
-  }
-
-  .user__info {
-    margin-right: 50px;
-  }
-
-  .user__info__name {
-    font-size: 18px;
-    width: 170px;
-    line-height: 24.51px;
-  }
-
-  .user__info__post {
-    font-size: 14px;
-    line-height: 19.07px;
-  }
-
-  .user__info__avatar {
-    width: 60px;
-    height: 60px;
-  }
-
-  .sort {
-    width: 255px;
-    height: 50px;
-  }
-
-  .sort__block {
-    width: 255px;
-  }
-
-  .reports {
-    max-height: 70vh;
-    font-size: 16px;
-  }
-
-  .reports-footer {
-    height: 80px;
-  }
-
-  .reports-list__body__element {
-    height: 80px
-  }
-
-  .reports__decrease-height {
-    height: 62vh;
-  }
-
-  .reports-title__my-reports__text {
-    font-size: 32px;
-  }
-
-  .reports-title__my-reports__btn button {
-    width: 220px;
-    height: 50px;
-    font-size: 18px;
-  }
-
-}
-
-@media screen and (max-width: 1600px) {
-
-}
-
-@media screen and (max-width: 1440px) {
-
-}
-
-@media screen and (max-width: 1280px){
-
-}
-
-@media screen and (max-width: 1024px){
-  .menu {
-    width: 256px;
-  }
-
-  .menu__body div {
-    padding-left: 28px;
-    font-size: 14px;
-  }
-
-  .menu__body img {
-    width: 24px;
-    height: 16px;
-  }
-
-  .active {
-    width: 180px;
-  }
-
-  .menu__folded .active {
-    margin-right: 0;
-    margin-left: 10px;
-  }
-
-  .menu__header {
-    padding: 9px 12px;
-    height: 70px;
-    justify-content: flex-start;
-  }
-
-  .menu__header__text {
-    font-size: 12px;
-    width: 242px;
-    line-height: 17.64px;
-  }
-
-  .menu__header img{
-    width: 50px;
-    height: 50px;
-  }
-
-  .menu__folded .menu__header {
-    padding: 24px 28px;
-  }
-
-  .menu__folded .menu__header img {
-    width: 50px;
-    height: 50px;
-  }
-
-  .menu__footer {
-    padding-left: 30px;
-  }
-
-  .menu__footer__text {
-    font-size: 12px;
-  }
-
-  .menu__folded {
-    width: 120px;
-  }
-
-  .menu__folded .menu__body {
-    margin-left: 0;
-    padding-left: 0;
-  }
-
-  .menu__folded .menu__body__list img {
-    margin-right: 6px;
-  }
-
-  .menu__folded .menu__body__list {
-    padding-left: 25px !important;
-  }
-
-  .menu__folded .active {
-    width: 37px;
-    height: 35px;
+  body {
+    background-color: #eef2f4;
+    margin: 0;
+    font-family: "Open Sans Regular";
     display: flex;
-    align-items: center;
   }
 
-  .menu__folded .active img {
-    width: 24px;
-  }
-
-  .menu__folded .menu__body__list a {
-    margin-left: 10px;
-  }
-
-  .menu__footer__toggle a {
-    padding-top: 0;
-  }
-
-  .menu__folded .menu__footer img {
-    margin-left: 15px;
-    width: 16px;
-    height: 16px;
-  }
-
-  .header__input {
-    height: 60px;
-  }
-
-  .header__main {
-    padding: 0 0 0 36px;
-  }
-
-  .user__notification img {
-    width: 18px;
-    height: 18px;
-  }
-
-  .user__info {
-    margin-right: 50px;
-  }
-
-  .user__info__name {
-    font-size: 14px;
-    width: 140px;
-    line-height: 19.07px;
-  }
-
-  .user__info__post {
-    font-size: 10px;
-    line-height: 13.62px;
-  }
-
-  .user__info__avatar {
-    width: 40px;
-    height: 40px;
-  }
-
-  .user__info__arrow img {
-    width: 20px;
-    height: 20px;
+  .main {
+    width: 100%;
+    height: 100%;
   }
 
   .sort {
-    width: 191px;
-    height: 30px;
-    font-size: 12px;
+    -moz-user-select: -moz-none;
+    -o-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
   }
 
-  .sort__block {
-    width: 191px;
+  .user__notification, .user__info__arrow, .sort__block__element, .menu__body__list a,
+  .menu__footer__toggle a, .reports-title__my-reports__btn button, .variables, .reports-footer__submit__button button {
+    cursor: pointer;
   }
 
-  .reports {
-    max-height: 70vh;
-    font-size: 12px;
+  @media screen and (max-width: 2732px) {
+
   }
 
-  .reports input[type="checkbox"] {
-    width: 16px;
-    height: 16px;
+  @media screen and (max-width: 2560px) {
+
   }
 
-  .reports-footer {
-    height: 50px;
+  @media screen and (max-width: 2048px) {
+
   }
 
-  .reports-list__body__element {
-    height: 60px
+  @media screen and (min-width: 1920px) {
+
+    .sort {
+      max-width: 350px;
+      height: 50px;
+    }
+
+    .sort__block {
+      width: 255px;
+    }
+
+    .reports {
+      max-height: 70vh;
+      font-size: 16px;
+    }
+
+    .reports-footer {
+      height: 80px;
+    }
+
+    .reports__body__line {
+      height: 80px;
+      font-size: 16px;
+    }
+
+    .reports__decrease-height {
+      height: 62vh;
+    }
+
+    .reports-title__my-reports__text {
+      font-size: 32px;
+    }
+
+    .reports-title__my-reports__btn button {
+      width: 220px;
+      height: 50px;
+      font-size: 18px;
+    }
+
   }
 
-  .reports__decrease-height {
-    height: 62vh;
+  @media screen and (max-width: 1600px) {
+
   }
 
-  .reports-title__my-reports__text {
-    font-size: 18px;
+  @media screen and (max-width: 1440px) {
+
   }
 
-  .reports-title__my-reports__btn button {
-    width: 140px;
-    height: 30px;
-    font-size: 12px;
-  }
-}
+  @media screen and (max-width: 1280px) {
 
-
-@media screen and (max-height: 800px) {
-  .menu__footer {
-    max-height: 200px;
   }
 
-  .menu {
-    min-height: 100vh;
+  @media screen and (max-width: 1024px) {
+
+    .sort {
+      width: 191px;
+      height: 30px;
+      font-size: 12px;
+    }
+
+    .sort__block {
+      width: 191px;
+    }
+
+    .reports {
+      max-height: 70vh;
+      font-size: 12px;
+    }
+
+    .reports input[type="checkbox"] {
+      width: 16px;
+      height: 16px;
+    }
+
+    .reports-footer {
+      height: 50px;
+    }
+
+    .reports__body__element {
+      height: 60px
+    }
+
+    .reports__decrease-height {
+      height: 62vh;
+    }
+
+    .reports-title__my-reports__text {
+      font-size: 18px;
+    }
+
+    .reports-title__my-reports__btn button {
+      width: 140px;
+      height: 30px;
+      font-size: 12px;
+    }
   }
-}
-
-@media screen and (max-height: 700px) {
-  .menu__footer {
-    max-height: 200px;
-  }
-
-  .menu__footer__toggle a {
-    padding-top: 0;
-    bottom: 25px;
-  }
-
-}
-
-@media screen and (max-height: 600px) {
-  .menu__footer {
-    max-height: 200px;
-  }
-
-  .menu__footer__toggle a {
-    padding-top: 0;
-    bottom: 25px;
-  }
-
-}
-
-@media screen and (max-height: 500px) {
-  .menu__footer {
-    max-height: 200px;
-  }
-
-  .menu__footer__toggle a {
-    padding-top: 0;
-    bottom: 25px;
-  }
-}
