--- a/public/musa/reusable-blocks/districts-menu/__body.css
+++ b/public/musa/reusable-blocks/districts-menu/__body.css
@@ -1,19 +1,17 @@
-.menu__folded .menu__body {
-  padding-left: 18px;
-}
-
 .menu__folded .menu__body__list img {
   margin-right: 0;
-  margin-left: 8px;
 }
 
+.menu__folded .active img {
+  padding-left: 10px;
+}
+
+.menu__folded .active {
+  margin-right: 12px;
+}
 
 .menu__body div{
   padding-left: 25px;
-}
-
-.menu__folded .menu__body div {
-  padding-left: 0;
 }
 
 .menu__body__list {
@@ -25,24 +23,36 @@
 }
 
 .menu__body__list a {
-  height: 23px;
+  height: 30px;
   display: flex;
   align-items: center;
   margin-bottom: 18px;
   transition: 0.2s;
   text-decoration: none;
   color: #535c69;
-  width: 180px;
+  width: 85%;
+  padding: 10px;
   white-space: nowrap;
+}
+
+.menu__folded .menu__body__list {
+  padding-left: 18px;
+}
+
+.menu__folded .menu__body__list a {
+  width: 35px;
+  border-radius: 10px;
 }
 
 .menu__body__list a span {
   min-width: 170px;
 }
 
-.menu__body__list a:hover {
-  color: #939ba7;
+.menu__folded .menu__body__list a span {
+  min-width: 40px;
 }
+
+
 
 .menu__body__list img {
   margin-right: 6px;
@@ -51,6 +61,20 @@
 .menu__body__list a:hover {
   color: #fff;
   background: #535c69;
+  border-radius: 10px;
+}
+
+.menu__folded .menu__body__list a:hover {
+  color: #fff !important;
+  background: #535c69;
+}
+
+.menu__footer a {
+  margin-left: 9px;
+}
+
+.menu__folded .active .menu-icon {
+  margin-left: 9px;
 }
 
 
