--- a/public/musa/reusable-blocks/districts-menu/menu.css
+++ b/public/musa/reusable-blocks/districts-menu/menu.css
@@ -16,13 +16,13 @@
   transition: 0.5s;
 }
 
-.menu, .sort__block, .reports, .reports-footer,.reports-footer__action__sort{
+.menu, .sort__block, .reports, .reports-footer,.reports-footer__action__sort {
   -webkit-box-shadow: -1px 3px 29px -5px rgba(34, 60, 80, 0.2);
   -moz-box-shadow: -1px 3px 29px -5px rgba(34, 60, 80, 0.2);
   box-shadow: -1px 3px 29px -5px rgba(34, 60, 80, 0.2);
 }
 
-.menu, .user__info__avatar, .body__back-button, .sort__block, .reports, .reports-list__body__avatar, .reports-footer, .reports-footer__action__sort{
+.menu, .user__info__avatar, .body__back-button, .sort__block, .reports, .reports__body__avatar, .reports-footer, .reports-footer__action__sort{
   background-color: #fff;
 }
 
@@ -31,18 +31,45 @@
   min-width: 68px;
 }
 
-.menu__folded .menu__header img, .user__info__avatar{
+.menu__folded .menu__header img, .user__info__avatar {
   width: 40px;
   height: 40px;
+  margin-left: 4px;
 }
 
 .menu__folded .menu__body__list span, .menu__folded .menu__footer__text {
+  visibility: hidden;
   opacity: 0;
-  transition: 0.3s;
+  transition: 0.2s;
 }
 
 .menu__folded .menu__header div {
   display: none;
+  opacity: 0;
+  transition: 0.2s;
+}
+
+.menu__folded .menu__footer img {
+  visibility: visible;
+  opacity: 1;
+  display: inline;
+}
+
+.menu__body__list span, .menu__footer__text {
+  opacity: 1;
+  visibility: visible;
+  transition: 0.3s;
+}
+
+.menu__header div {
+  opacity: 1;
+  visibility: visible;
+  transition: 0.3s;
+}
+
+.menu__folded .menu__footer a {
+  margin-left: 0;
+  max-width: 40px;
 }
 
 .menu__folded .active {
@@ -59,10 +86,33 @@
   height: 35px !important;
   width: 146px;
   background-color: #535c69;
-  border-radius: 1px;
+  border-radius: 10px;
   color: #fff !important;
   fill: #fff;
   transition: 0.3s;
+}
+
+.menu-icon {
+  min-width: 16px !important;
+  display: inline !important;
+  visibility: visible !important;
+  opacity: 1 !important;
+  margin-right: 6px;
+  font-size: 16px;
+  width: 16px;
+  height: 16px;
+}
+
+.menu__header img{
+  min-width: 40px !important;
+}
+
+.toggle-icon {
+  margin-right: 6px;
+}
+
+.menu__folded .toggle-icon {
+  margin-right: 0;
 }
 
 @media screen and (max-width: 2732px) {
@@ -96,3 +146,5 @@
 @media screen and (max-width: 1024px){
 
 }
+
+
