--- a/public/musa/reusable-blocks/menu/__body.css
+++ b/public/musa/reusable-blocks/menu/__body.css
@@ -52,10 +52,6 @@
   min-width: 40px;
 }
 
-.menu__body__list a:hover {
-  color: #939ba7;
-}
-
 .menu__body__list img {
   margin-right: 6px;
 }
@@ -63,6 +59,7 @@
 .menu__body__list a:hover {
   color: #fff;
   background: #535c69;
+  border-radius: 8px;
 }
 
 .menu__folded .menu__body__list a:hover {
@@ -71,6 +68,10 @@
 }
 
 .menu__footer a {
+  margin-left: 9px;
+}
+
+.menu__folded .active .menu-icon {
   margin-left: 9px;
 }
 
