--- a/public/musa/reusable-blocks/menu/__footer.css
+++ b/public/musa/reusable-blocks/menu/__footer.css
@@ -1,8 +1,11 @@
 .menu__footer {
+  display: flex;
+  align-items: flex-end;
   padding-left: 25px;
   vertical-align: bottom;
   flex-grow: 1;
   position: relative;
+  padding-bottom: 100px;
 }
 
 .menu__footer__text {
@@ -11,17 +14,11 @@
 }
 
 .menu__footer a {
-  position: absolute;
-  bottom: 50px;
-}
-
-.menu__footer a {
   display: flex;
   align-items: center;
   text-decoration: none;
   color: #535c69;
   transition: 0.1s;
-  padding-top: 50%;
 }
 
 .menu__footer a:hover {
@@ -31,8 +28,4 @@
 .menu__footer img{
   margin-right: 14px;
   margin-left: 1px;
-}
-
-.menu__footer__toggle a {
-  padding-top: 0 !important;
 }
