--- a/public/musa/reusable-blocks/menu/menu.css
+++ b/public/musa/reusable-blocks/menu/menu.css
@@ -10,10 +10,23 @@
   min-height: 700px;
   display: flex;
   flex-direction: column;
+  position: relative;
   width: 250px;
   min-width: 250px;
   color: #535c69;
   transition: 0.5s;
+  background: none !important;
+}
+
+.menu__main {
+ position: fixed;
+ height: 100vh;
+ width: 250px;
+ min-height: 700px;
+ display: flex;
+ flex-direction: column;
+ transition: 0.5s;
+ background-color: #fff;
 }
 
 .menu, .sort__block, .reports, .reports-footer,.reports-footer__action__sort {
@@ -31,10 +44,14 @@
   min-width: 68px;
 }
 
+.menu__folded .menu__main {
+  width: 68px;
+}
+
 .menu__folded .menu__header img, .user__info__avatar {
   width: 40px;
   height: 40px;
-  margin-left: 4px;
+  /* margin-left: 4px; */
 }
 
 .menu__folded .menu__body__list span, .menu__folded .menu__footer__text {
@@ -98,6 +115,8 @@
 
 .menu__header img{
   min-width: 40px !important;
+  width: 40px;
+  image-rendering: auto;
 }
 
 .toggle-icon {
@@ -108,7 +127,9 @@
   margin-right: 0;
 }
 
-.menu__body
+.menu__folded .menu__header {
+  margin-left: 0px;
+}
 
 @media screen and (max-width: 2732px) {
 
@@ -127,6 +148,10 @@
   body .menu {
     height: 100vh;
     width: 420px;
+  }
+
+  body .menu__main {
+    min-width: 350px;
   }
 
   body .menu__body div {
@@ -180,6 +205,7 @@
   body .menu__folded .menu__header img {
     width: 70px;
     height: 70px;
+    margin-left: 8px;
   }
 
   body .menu__folded .menu__body__list a {
@@ -199,8 +225,12 @@
     width: 146px;
   }
 
+  body .menu__folded .menu__main {
+    min-width: 146px;
+  }
+
   body .menu__folded .menu__body__list {
-    padding-left: 46px;
+    padding-left: 48px;
   }
 
   body .menu__folded .active {
@@ -213,10 +243,6 @@
     margin-left: 16px;
     width: 20px;
     height: 20px;
-  }
-
-  body .menu__folded .menu__footer__toggle {
-    padding-top: 50%;
   }
 
   body .menu__body__list a {
@@ -243,11 +269,11 @@
 
 }
 
-@media screen and (max-width: 1280px){
+@media screen and (max-width: 1280px) {
 
 }
 
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 1024px) {
 
   body .menu {
     width: 256px;
@@ -301,10 +327,15 @@
   body .menu__folded .menu__header img {
     width: 50px;
     height: 50px;
+    margin-left: -16px;
   }
 
   body .menu__footer {
     padding-left: 30px;
+  }
+
+  body .menu__folded .menu__footer {
+    padding-left: 10px;
   }
 
   body .menu__footer__text {
@@ -312,7 +343,16 @@
   }
 
   body .menu__folded {
-    width: 120px;
+    width: 68px;
+    min-width: 68px;
+  }
+
+  body .menu__folded .menu__main {
+    width: 68px;
+  }
+
+  body .menu__folded .active .menu-icon {
+    margin-left: 8.5px;
   }
 
   body .menu__folded .menu__body {
@@ -320,12 +360,16 @@
     padding-left: 0;
   }
 
+  body .menu__folded .menu__body__list .active {
+    margin-left: 11px !important;
+  }
+
   body .menu__folded .menu__body__list img {
     margin-right: 6px;
   }
 
   body .menu__folded .menu__body__list {
-    padding-left: 25px !important;
+    padding-left: 3px !important;
   }
 
   body .menu__folded .active {
@@ -361,7 +405,7 @@
 
 @media screen and (max-height: 800px) {
   body .menu__footer {
-    max-height: 300px;
+    max-height: 500px;
   }
 
   body .menu {
@@ -371,19 +415,18 @@
 
 @media screen and (max-height: 700px) {
   body .menu__footer {
-    max-height: 200px;
+    max-height: 400px;
   }
 
   body .menu__footer__toggle a {
-    padding-top: 0;
     bottom: 25px;
   }
 
 }
 
-@media screen and (max-height: 600px) {
+@media screen and (max-height: 630px) {
   body .menu__footer {
-    max-height: 200px;
+    padding-bottom: 200px;
   }
 
   body .menu__footer__toggle a {
