--- a/public/musa/notifications/blocks/content/body/__notification__districts.css
+++ b/public/musa/notifications/blocks/content/body/__notification__districts.css
@@ -12,6 +12,8 @@
 .notifications__districts__header {
     width: 100%;
     height: 50px;
+    display: flex;
+    align-items: center;
     color: white;
     border-radius: 4px 4px 0 0;
     background-color: #535C69;
